# rapidfort-task

./: CMakeLists.txt  readme.md  vcpkg.json
client/: CMakeLists.txt  main.cpp
core/: CMakeLists.txt
core/core/: prime_generator.hpp
core/tests/: CMakeLists.txt  runner.cpp
core/utils/: io.hpp  packed.hpp
server/: CMakeLists.txt  main.cpp  server.hpp  session.hpp
